# cpp-middle-practicum

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: cache.h  compose.h  is_equal.h  span.h  tagdispatching.h
src/: error_value.cpp  is_equal.cpp  main.cpp  span.cpp  storage.cpp  ttt.cpp
tests/: main_test.cpp
